# chteams

./: .coverage  .gitignore  README.md  keep_active.py  pyproject.toml
.gemini/: GEMINI.md
src/chteams/: engine.py  macos.py  main.py  ui.py
tests/: test_engine.py  test_macos.py  test_main.py  test_ui.py
