[project]
name = "chteams"
version = "0.1.0"
description = "A robust macOS utility to prevent Microsoft Teams from automatically switching status to Away."
authors = [{ name = "Enrique Zetina" }]
dependencies = [
    "pyautogui>=0.9.54",
    "rich>=14.3.0",
]
requires-python = ">=3.14"

[project.scripts]
keep-active = "chteams.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
