[project]
name = "chteams"
version = "0.2.0"
description = "A robust macOS utility to prevent Microsoft Teams from automatically switching status to Away."
authors = [{ name = "Enrique Zetina" }]
dependencies = [
    "rich>=13.0.0",
]
requires-python = ">=3.9"

[project.scripts]
keep-active = "chteams.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
